training pipeline complete

--- a/Blame_inference.ipynb
+++ b/Blame_inference.ipynb
@@ -2,37 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71799c83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#load packages\n",
-    "import pandas as pd\n",
-    "import torch\n",
-    "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
-    "import numpy as np\n",
-    "from typing import Union, List, Tuple\n",
-    "import json\n",
-    "from tqdm import tqdm \n",
-    "from peft import PeftModel\n",
-    "from datasets import Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c7aaae9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#try again with full model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
-   "id": "969c4714",
+   "id": "71799c83",
    "metadata": {},
    "outputs": [
     {
@@ -40,61 +11,129 @@
      "output_type": "stream",
      "text": [
       "/work/MarkusLundsfrydJensen#1865/miniconda3/envs/blame_bert/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-29 11:49:22.859912: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-29 11:49:22.926017: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "#load packages\n",
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5a4bcb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#next step -> implement batching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5c7aaae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OBS need to be made usable\n",
+    "class BlameDetectorDa(object):\n",
+    "\n",
+    "    def __init__(self, model_path, max_length = 512):\n",
+    "\n",
+    "        self.model_path = model_path\n",
+    "        self.max_length = max_length\n",
+    "        #self.batch_size = batch_size\n",
+    "\n",
+    "        self.model_initialization()\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    def model_initialization(self):\n",
+    "        self.model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "            self.model_path,\n",
+    "            device_map = 'auto'\n",
+    "        )\n",
+    "\n",
+    "        self.model.eval()\n",
+    "\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(self.model_path)\n",
+    "        \n",
+    "            \n",
+    "        # Move to GPU if available\n",
+    "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "        self.model.to(self.device)\n",
+    "\n",
+    "        print(f\"Model loaded successfully on {self.device}\")\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    def predict(self):\n",
+    "        \"\"\"Make a prediction on a single text input.\"\"\"\n",
+    "        # Tokenize input\n",
+    "        inputs = self.tokenizer(\n",
+    "            self.text,\n",
+    "            padding=True,\n",
+    "            truncation=True,\n",
+    "            max_length=self.max_length,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "       \n",
+    "        # Move inputs to device\n",
+    "        inputs = {k: v.to(self.model.device) for k, v in inputs.items()}\n",
+    "        # Make prediction\n",
+    "        with torch.no_grad():\n",
+    "            outputs = self.model(**inputs)\n",
+    "            logits = outputs.logits\n",
+    "            probabilities = torch.softmax(logits, dim=1)\n",
+    "            predicted_class = torch.argmax(probabilities, dim=1).item()\n",
+    "            confidence = probabilities[0][predicted_class].item()\n",
+    "        \n",
+    "        return predicted_class, confidence, probabilities[0].cpu().numpy()\n",
+    "\n",
+    "    def run_prediction(self, text):\n",
+    "\n",
+    "        self.text = text\n",
+    "        predicted_class, confidence, probs = self.predict()\n",
+    "            \n",
+    "        return predicted_class, confidence\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a1295b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-29 12:26:32.017384: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-29 12:26:32.084633: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-29 11:49:24.297223: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-10-29 12:26:33.439445: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded successfully!\n"
+      "Model loaded successfully on cuda\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "\n",
-    "# Load full precision model (deterministic)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "    \"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\",\n",
-    "    device_map = 'auto'\n",
-    ")\n",
-    "model.eval()\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\")\n",
-    "# Move to GPU if available\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "model.to(device)\n",
-    "\n",
-    "print(\"Model loaded successfully!\")\n",
-    "\n",
-    "# Same predict function as before\n",
-    "def predict(text):\n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True, max_length=512)\n",
-    "    inputs = {k: v.to(model.device) for k, v in inputs.items()}\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "        logits = outputs.logits\n",
-    "        probs = torch.softmax(logits, dim=-1)\n",
-    "        prediction = torch.argmax(probs, dim=-1)\n",
-    "    \n",
-    "    return {\n",
-    "        'prediction': prediction.item(),\n",
-    "        'probability_class_0': probs[0][0].item(),\n",
-    "        'probability_class_1': probs[0][1].item()\n",
-    "    }"
+    "BD = BlameDetectorDa(model_path = \"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "e485a6dc",
    "metadata": {},
    "outputs": [
@@ -116,9 +155,9 @@
     "for entry in data:\n",
     "    text = entry[\"text\"]\n",
     "\n",
-    "    result = predict(text)\n",
+    "    entry[\"pred\"], _ = BD.run_prediction(text)\n",
     "\n",
-    "    entry[\"pred\"] = result[\"prediction\"]\n",
+    "    \n",
     "\n",
     "true_labels = 0\n",
     "pred_true = 0\n",
@@ -151,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fa97f962",
    "metadata": {},
    "outputs": [
@@ -166,9 +205,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pred_true"
-   ]
+   "source": []
   }
  ],
  "metadata": {
