--- a/training_pipline_3_5_5_markus.ipynb
+++ b/training_pipline_3_5_5_markus.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6fb794a6",
    "metadata": {},
    "outputs": [
@@ -41,10 +41,10 @@
      "text": [
       "/work/MarkusLundsfrydJensen#1865/miniconda3/envs/blame_bert/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-29 11:47:11.696765: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-29 11:47:11.757230: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-10-29 12:32:13.754118: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-29 12:32:13.809948: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-29 11:47:12.891181: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-10-29 12:32:14.932690: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -68,10 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fdbb29e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n",
+      "Some weights of ModernBertForSequenceClassification were not initialized from the model checkpoint at jhu-clsp/mmBERT-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "base_model_name = \"jhu-clsp/mmBERT-base\"\n",
     "\n",
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "07c61a51",
    "metadata": {},
    "outputs": [
@@ -143,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 433.85 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 392.86 examples/s]\n"
      ]
     }
    ],
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "77531159",
    "metadata": {},
    "outputs": [
@@ -168,17 +178,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16692/1600698932.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_42591/3164835705.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_dataframe.rename(columns={'label': 'labels'}, inplace=True)\n",
-      "Map (num_proc=16): 100%|██████████| 3600/3600 [00:00<00:00, 5417.15 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 10000/10000 [00:01<00:00, 6959.19 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "dataframe_3_4_5 = pd.read_json(\"/work/MarkusLundsfrydJensen#1865/Training_data/subset_3_4_5_cleaned_training_data (1).json\")\n",
+    "input_data_dir = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json\"\n",
+    "\n",
+    "dataframe_3_4_5 = pd.read_json(input_data_dir)\n",
     "\n",
     "dataframe_3_4_5 = dataframe_3_4_5.sample(frac=1)\n",
     "\n",
@@ -186,7 +198,7 @@
     "\n",
     "test_dataframe.rename(columns={'label': 'labels'}, inplace=True)\n",
     "\n",
-    "test_dataframe = test_dataframe[0:10000]\n",
+    "test_dataframe = test_dataframe[0:50000]\n",
     "\n",
     "test_dataset = Dataset.from_pandas(test_dataframe)\n",
     "\n",
@@ -198,25 +210,14 @@
    "execution_count": null,
    "id": "e7863f5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trainable params: 3,416,096 || all params: 310,947,874 || trainable%: 1.0986\n",
-      "Training samples: 3600\n",
-      "Validation samples: 258\n",
-      "Training steps per epoch: 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Smaller batch size with gradient accumulation\n",
     "training_args = TrainingArguments(\n",
     "    output_dir='/work/MarkusLundsfrydJensen#1865',\n",
     "    #optim=\"paged_adamw_8bit\",\n",
     "    learning_rate=1e-4,\n",
-    "    num_train_epochs=3,\n",
+    "    num_train_epochs=5,\n",
     "    per_device_train_batch_size=16,  # Reduced\n",
     "    gradient_accumulation_steps=16,  # Effective batch = 256\n",
     "    logging_steps=1,  # More frequent logging\n",
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "bd22494d",
    "metadata": {},
    "outputs": [],
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "b2363d4a",
    "metadata": {},
    "outputs": [
@@ -307,11 +308,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class 0 weight: 1.0\n",
-      "Class 1 weight: 1.0\n",
+      "Class 0 weight: 0.5043373007867662\n",
+      "Class 1 weight: 58.13953488372093\n",
       "Label distribution: labels\n",
-      "0    1800\n",
-      "1    1800\n",
+      "0    9914\n",
+      "1      86\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "233b94c6",
    "metadata": {},
    "outputs": [
@@ -365,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1., 1.])\n"
+      "tensor([ 0.5043, 58.1395])\n"
      ]
     },
     {
@@ -374,8 +375,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='45' max='45' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [45/45 01:22, Epoch 3/3]\n",
+       "      <progress value='120' max='120' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [120/120 03:40, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -396,41 +397,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.587700</td>\n",
-       "      <td>0.600283</td>\n",
-       "      <td>0.600283</td>\n",
-       "      <td>0.600283</td>\n",
-       "      <td>0.863636</td>\n",
-       "      <td>0.604226</td>\n",
-       "      <td>0.701550</td>\n",
-       "      <td>0.697731</td>\n",
-       "      <td>141.000000</td>\n",
+       "      <td>0.043500</td>\n",
+       "      <td>1.631627</td>\n",
+       "      <td>0.730610</td>\n",
+       "      <td>0.730610</td>\n",
+       "      <td>0.011364</td>\n",
+       "      <td>0.717009</td>\n",
+       "      <td>0.662791</td>\n",
+       "      <td>0.409362</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.429100</td>\n",
-       "      <td>0.498555</td>\n",
-       "      <td>0.498555</td>\n",
-       "      <td>0.498555</td>\n",
-       "      <td>0.818182</td>\n",
-       "      <td>0.724010</td>\n",
-       "      <td>0.763566</td>\n",
-       "      <td>0.753149</td>\n",
-       "      <td>117.000000</td>\n",
+       "      <td>0.044400</td>\n",
+       "      <td>1.050028</td>\n",
+       "      <td>0.498345</td>\n",
+       "      <td>0.498345</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.765526</td>\n",
+       "      <td>0.728682</td>\n",
+       "      <td>0.624282</td>\n",
+       "      <td>34.000000</td>\n",
        "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.277800</td>\n",
-       "      <td>0.494904</td>\n",
-       "      <td>0.494904</td>\n",
-       "      <td>0.494904</td>\n",
-       "      <td>0.840909</td>\n",
-       "      <td>0.749380</td>\n",
-       "      <td>0.767442</td>\n",
-       "      <td>0.758367</td>\n",
-       "      <td>120.000000</td>\n",
+       "      <td>0.015600</td>\n",
+       "      <td>1.352108</td>\n",
+       "      <td>0.594450</td>\n",
+       "      <td>0.594450</td>\n",
+       "      <td>0.261364</td>\n",
+       "      <td>0.777156</td>\n",
+       "      <td>0.720930</td>\n",
+       "      <td>0.604463</td>\n",
+       "      <td>30.000000</td>\n",
        "      <td>88</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -444,21 +445,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "W0000 00:00:1761734876.026349   16692 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=45, training_loss=8.07119000090493, metrics={'train_runtime': 92.3833, 'train_samples_per_second': 116.904, 'train_steps_per_second': 0.487, 'total_flos': 3793522603622400.0, 'train_loss': 8.07119000090493, 'epoch': 3.0})"
+       "TrainOutput(global_step=120, training_loss=3.6155680281265328, metrics={'train_runtime': 222.397, 'train_samples_per_second': 134.894, 'train_steps_per_second': 0.54, 'total_flos': 1.053756278784e+16, 'train_loss': 3.6155680281265328, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,14 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaea8024",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ab11bbf5",
    "metadata": {},
    "outputs": [
@@ -511,8 +495,20 @@
     "# Merge (now clean, no quantization artifacts)\n",
     "model = trainer.model\n",
     "merged_model = model.merge_and_unload()\n",
-    "merged_model.save_pretrained(\"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\")\n",
-    "tokenizer.save_pretrained(\"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\")"
+    "\n",
+    "output_model_dir = \"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\"\n",
+    "merged_model.save_pretrained(output_model_dir)\n",
+    "tokenizer.save_pretrained(output_model_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79714b96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Hold up"
    ]
   },
   {
