--- a/TP_345_markus.ipynb
+++ b/TP_345_markus.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6fb794a6",
    "metadata": {},
    "outputs": [
@@ -41,10 +41,10 @@
      "text": [
       "/work/MarkusLundsfrydJensen#1865/miniconda3/envs/blame_bert/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-29 12:32:13.754118: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-29 12:32:13.809948: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-10-29 14:32:42.088896: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-29 14:32:42.138503: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-29 12:32:14.932690: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-10-29 14:32:43.107162: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fdbb29e4",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "07c61a51",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 392.86 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 554.27 examples/s]\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "77531159",
    "metadata": {},
    "outputs": [
@@ -178,12 +178,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_42591/3164835705.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_14772/775643221.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_dataframe.rename(columns={'label': 'labels'}, inplace=True)\n",
-      "Map (num_proc=16): 100%|██████████| 10000/10000 [00:01<00:00, 6959.19 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 50000/50000 [00:03<00:00, 12907.84 examples/s]\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e7863f5c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "bd22494d",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "b2363d4a",
    "metadata": {},
    "outputs": [
@@ -308,11 +308,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class 0 weight: 0.5043373007867662\n",
-      "Class 1 weight: 58.13953488372093\n",
+      "Class 0 weight: 0.5047038397868131\n",
+      "Class 1 weight: 53.648068669527895\n",
       "Label distribution: labels\n",
-      "0    9914\n",
-      "1      86\n",
+      "0    49534\n",
+      "1      466\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "233b94c6",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.5043, 58.1395])\n"
+      "tensor([ 0.5047, 53.6481])\n"
      ]
     },
     {
@@ -375,8 +375,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='120' max='120' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [120/120 03:40, Epoch 3/3]\n",
+       "      <progress value='44' max='980' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 44/980 01:16 < 28:32, 0.55 it/s, Epoch 0.22/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -384,56 +384,9 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
-       "      <th>Keras Bce</th>\n",
-       "      <th>Weighted bce</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Accuracy</th>\n",
-       "      <th>F1</th>\n",
-       "      <th>Number Of True Preds</th>\n",
-       "      <th>Number Of True Labels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>0.043500</td>\n",
-       "      <td>1.631627</td>\n",
-       "      <td>0.730610</td>\n",
-       "      <td>0.730610</td>\n",
-       "      <td>0.011364</td>\n",
-       "      <td>0.717009</td>\n",
-       "      <td>0.662791</td>\n",
-       "      <td>0.409362</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0.044400</td>\n",
-       "      <td>1.050028</td>\n",
-       "      <td>0.498345</td>\n",
-       "      <td>0.498345</td>\n",
-       "      <td>0.295455</td>\n",
-       "      <td>0.765526</td>\n",
-       "      <td>0.728682</td>\n",
-       "      <td>0.624282</td>\n",
-       "      <td>34.000000</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0.015600</td>\n",
-       "      <td>1.352108</td>\n",
-       "      <td>0.594450</td>\n",
-       "      <td>0.594450</td>\n",
-       "      <td>0.261364</td>\n",
-       "      <td>0.777156</td>\n",
-       "      <td>0.720930</td>\n",
-       "      <td>0.604463</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -443,16 +396,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=120, training_loss=3.6155680281265328, metrics={'train_runtime': 222.397, 'train_samples_per_second': 134.894, 'train_steps_per_second': 0.54, 'total_flos': 1.053756278784e+16, 'train_loss': 3.6155680281265328, 'epoch': 3.0})"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
