--- a/TP_12345 copy 3.ipynb
+++ b/TP_12345 copy 3.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6fb794a6",
    "metadata": {},
    "outputs": [
@@ -39,12 +39,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/work/MarkusLundsfrydJensen#1865/miniconda3/envs/blame_bert/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-29 14:27:43.000372: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-29 14:27:43.054530: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-10-29 14:45:15.420188: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-29 14:45:20.835767: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-29 14:27:44.069003: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-10-29 14:45:55.476934: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fdbb29e4",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -105,13 +105,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 3,416,096 || all params: 310,947,874 || trainable%: 1.0986\n"
+      "trainable params: 6,832,192 || all params: 314,363,970 || trainable%: 2.1733\n"
      ]
     }
    ],
    "source": [
     "lora_config = LoraConfig(\n",
-    "    r=32,  # Low-rank dimension\n",
+    "    r=32,  # Low-rank dimension (Unsloth recommends 16 or 32)\n",
     "    lora_alpha=64,\n",
     "    lora_dropout=0.05,\n",
     "    target_modules=\"all-linear\"  # Fine-tuning all linear (classification, attention... layers)\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "07c61a51",
    "metadata": {},
    "outputs": [
@@ -153,12 +153,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 460.77 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 517.86 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "val_dataframe = pd.read_json(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\")\n",
+    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n",
     "\n",
     "val_dataframe = val_dataframe[['text', 'label']]\n",
     "\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "77531159",
    "metadata": {},
    "outputs": [
@@ -178,17 +178,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10912/775643221.py:9: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_3800/2695527915.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_dataframe.rename(columns={'label': 'labels'}, inplace=True)\n",
-      "Map (num_proc=16): 100%|██████████| 50000/50000 [00:04<00:00, 12179.77 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 50000/50000 [00:02<00:00, 21198.96 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "input_data_dir = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json\"\n",
+    "input_data_dir = \"/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_1_2_3_4_5_temps.json\"\n",
     "\n",
     "dataframe_3_4_5 = pd.read_json(input_data_dir)\n",
     "\n",
@@ -207,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e7863f5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Smaller batch size with gradient accumulation\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir='/work/MarkusLundsfrydJensen#1865',\n",
+    "    output_dir='/work/RuneEgeskovTrust#9638/Bachelor',\n",
     "    #optim=\"paged_adamw_8bit\",\n",
     "    learning_rate=1e-4,\n",
     "    num_train_epochs=5,\n",
@@ -241,12 +241,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "bd22494d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class 0 weight: 0.5083987473054866\n",
+      "Class 1 weight: 30.26634382566586\n",
+      "Label distribution: labels\n",
+      "0    49174\n",
+      "1      826\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "def weighted_bincrossentropy(true, pred, weight_zero = 1, weight_one = 1):\n",
+    "label_counts = test_dataframe['labels'].value_counts()\n",
+    "total = len(test_dataframe)\n",
+    "weight_zero = total / (2 * label_counts[0])\n",
+    "weight_one = total / (2 * label_counts[1])\n",
+    "\n",
+    "print(f\"Class 0 weight: {weight_for_0}\")\n",
+    "print(f\"Class 1 weight: {weight_for_1}\")\n",
+    "print(f\"Label distribution: {label_counts}\")\n",
+    "\n",
+    "def weighted_bincrossentropy(true, pred, weight_zero = weight_zero, weight_one = weight_one):\n",
     "    \"\"\"\n",
     "    Calculates weighted binary cross entropy. The weights are fixed to represent class imbalance in the dataset.\n",
     "        \n",
@@ -255,7 +277,7 @@
     "        will be penalized 10 times as much as false negatives.\n",
     "\n",
     "    \"\"\"\n",
-    "  \n",
+    "\n",
     "    # calculate the binary cross entropy\n",
     "    bin_crossentropy = binary_crossentropy(true, pred)\n",
     "    \n",
@@ -269,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "de44b8ab",
    "metadata": {},
    "outputs": [],
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b2363d4a",
    "metadata": {},
    "outputs": [
@@ -308,11 +330,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class 0 weight: 0.5047445992327882\n",
-      "Class 1 weight: 53.191489361702125\n",
+      "Class 0 weight: 0.5083987473054866\n",
+      "Class 1 weight: 30.26634382566586\n",
       "Label distribution: labels\n",
-      "0    49530\n",
-      "1      470\n",
+      "0    49174\n",
+      "1      826\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -351,23 +373,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "233b94c6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The model is already on multiple devices. Skipping the move to device specified in `args`.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.5047, 53.1915])\n"
+      "tensor([ 0.5084, 30.2663])\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize?ref=models\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter:\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /home/ucloud/.netrc\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mrune-trust\u001b[0m (\u001b[33mrune-trust-aarhus-university\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.22.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/wandb/run-20251029_145001-nrm6pnhf</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/nrm6pnhf' target=\"_blank\">prime-energy-29</a></strong> to <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface' target=\"_blank\">https://wandb.ai/rune-trust-aarhus-university/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/nrm6pnhf' target=\"_blank\">https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/nrm6pnhf</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -375,8 +473,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='55' max='980' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 55/980 01:40 < 29:12, 0.53 it/s, Epoch 0.28/5]\n",
+       "      <progress value='980' max='980' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [980/980 29:49, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -384,9 +482,82 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Keras Bce</th>\n",
+       "      <th>Weighted bce</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Number Of True Preds</th>\n",
+       "      <th>Number Of True Labels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.018400</td>\n",
+       "      <td>0.440230</td>\n",
+       "      <td>0.364806</td>\n",
+       "      <td>3.888251</td>\n",
+       "      <td>0.772727</td>\n",
+       "      <td>0.820027</td>\n",
+       "      <td>0.837209</td>\n",
+       "      <td>0.819892</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.426700</td>\n",
+       "      <td>0.913758</td>\n",
+       "      <td>0.494225</td>\n",
+       "      <td>5.267649</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>0.783351</td>\n",
+       "      <td>0.817829</td>\n",
+       "      <td>0.786375</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.605200</td>\n",
+       "      <td>1.360887</td>\n",
+       "      <td>0.636307</td>\n",
+       "      <td>6.782010</td>\n",
+       "      <td>0.579545</td>\n",
+       "      <td>0.812579</td>\n",
+       "      <td>0.806202</td>\n",
+       "      <td>0.766845</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.266700</td>\n",
+       "      <td>2.547327</td>\n",
+       "      <td>1.089387</td>\n",
+       "      <td>11.611115</td>\n",
+       "      <td>0.488636</td>\n",
+       "      <td>0.801210</td>\n",
+       "      <td>0.790698</td>\n",
+       "      <td>0.735334</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>0.045800</td>\n",
+       "      <td>4.762702</td>\n",
+       "      <td>1.857201</td>\n",
+       "      <td>19.794786</td>\n",
+       "      <td>0.409091</td>\n",
+       "      <td>0.780417</td>\n",
+       "      <td>0.767442</td>\n",
+       "      <td>0.694602</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -396,6 +567,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "W0000 00:00:1761746193.543444    3800 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=980, training_loss=2.5777768616307983, metrics={'train_runtime': 1834.858, 'train_samples_per_second': 136.25, 'train_steps_per_second': 0.534, 'total_flos': 9.043658496e+16, 'train_loss': 2.5777768616307983, 'epoch': 5.0})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
