--- a/TP_2345 copy 2.ipynb
+++ b/TP_2345 copy 2.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6fb794a6",
    "metadata": {},
    "outputs": [
@@ -39,12 +39,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/work/MarkusLundsfrydJensen#1865/miniconda3/envs/blame_bert/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-10-29 14:27:43.000372: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-10-29 14:27:43.054530: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-10-29 16:10:43.918636: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-10-29 16:10:43.967038: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-10-29 14:27:44.069003: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2025-10-29 16:11:26.402630: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fdbb29e4",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2dc543b",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 3,416,096 || all params: 310,947,874 || trainable%: 1.0986\n"
+      "trainable params: 6,832,192 || all params: 314,363,970 || trainable%: 2.1733\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "07c61a51",
    "metadata": {},
    "outputs": [
@@ -153,12 +153,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 460.77 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 258/258 [00:00<00:00, 391.38 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "val_dataframe = pd.read_json(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\")\n",
+    "val_dataframe = pd.read_json(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\")\n",
     "\n",
     "val_dataframe = val_dataframe[['text', 'label']]\n",
     "\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "77531159",
    "metadata": {},
    "outputs": [
@@ -178,17 +178,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10912/775643221.py:9: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_46975/2695527915.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_dataframe.rename(columns={'label': 'labels'}, inplace=True)\n",
-      "Map (num_proc=16): 100%|██████████| 50000/50000 [00:04<00:00, 12179.77 examples/s]\n"
+      "Map (num_proc=16): 100%|██████████| 50000/50000 [00:02<00:00, 21567.52 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "input_data_dir = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json\"\n",
+    "input_data_dir = \"/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_1_2_3_4_5_temps.json\"\n",
     "\n",
     "dataframe_3_4_5 = pd.read_json(input_data_dir)\n",
     "\n",
@@ -214,7 +214,7 @@
    "source": [
     "# 1. Smaller batch size with gradient accumulation\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir='/work/MarkusLundsfrydJensen#1865',\n",
+    "    output_dir='/work/RuneEgeskovTrust#9638/Bachelor',\n",
     "    #optim=\"paged_adamw_8bit\",\n",
     "    learning_rate=1e-4,\n",
     "    num_train_epochs=5,\n",
@@ -244,9 +244,31 @@
    "execution_count": 9,
    "id": "bd22494d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class 0 weight: 0.5073875629160578\n",
+      "Class 1 weight: 34.34065934065934\n",
+      "Label distribution: labels\n",
+      "0    49272\n",
+      "1      728\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "def weighted_bincrossentropy(true, pred, weight_zero = 1, weight_one = 1):\n",
+    "label_counts = test_dataframe['labels'].value_counts()\n",
+    "total = len(test_dataframe)\n",
+    "weight_zero = total / (2 * label_counts[0])\n",
+    "weight_one = total / (2 * label_counts[1])\n",
+    "\n",
+    "print(f\"Class 0 weight: {weight_zero}\")\n",
+    "print(f\"Class 1 weight: {weight_one}\")\n",
+    "print(f\"Label distribution: {label_counts}\")\n",
+    "\n",
+    "def weighted_bincrossentropy(true, pred, weight_zero = weight_zero, weight_one = weight_one):\n",
     "    \"\"\"\n",
     "    Calculates weighted binary cross entropy. The weights are fixed to represent class imbalance in the dataset.\n",
     "        \n",
@@ -255,7 +277,7 @@
     "        will be penalized 10 times as much as false negatives.\n",
     "\n",
     "    \"\"\"\n",
-    "  \n",
+    "\n",
     "    # calculate the binary cross entropy\n",
     "    bin_crossentropy = binary_crossentropy(true, pred)\n",
     "    \n",
@@ -308,11 +330,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class 0 weight: 0.5047445992327882\n",
-      "Class 1 weight: 53.191489361702125\n",
+      "Class 0 weight: 0.5073875629160578\n",
+      "Class 1 weight: 34.34065934065934\n",
       "Label distribution: labels\n",
-      "0    49530\n",
-      "1      470\n",
+      "0    49272\n",
+      "1      728\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -351,23 +373,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "233b94c6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The model is already on multiple devices. Skipping the move to device specified in `args`.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.5047, 53.1915])\n"
+      "tensor([ 0.5074, 34.3407])\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mrune-trust\u001b[0m (\u001b[33mrune-trust-aarhus-university\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.22.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/wandb/run-20251029_161313-uol50uml</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/uol50uml' target=\"_blank\">peachy-glitter-30</a></strong> to <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface' target=\"_blank\">https://wandb.ai/rune-trust-aarhus-university/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/uol50uml' target=\"_blank\">https://wandb.ai/rune-trust-aarhus-university/huggingface/runs/uol50uml</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -375,8 +467,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='55' max='980' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 55/980 01:40 < 29:12, 0.53 it/s, Epoch 0.28/5]\n",
+       "      <progress value='980' max='980' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [980/980 29:50, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -384,9 +476,82 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Keras Bce</th>\n",
+       "      <th>Weighted bce</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Number Of True Preds</th>\n",
+       "      <th>Number Of True Labels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.803900</td>\n",
+       "      <td>0.299876</td>\n",
+       "      <td>0.422653</td>\n",
+       "      <td>5.091883</td>\n",
+       "      <td>0.897727</td>\n",
+       "      <td>0.805658</td>\n",
+       "      <td>0.825581</td>\n",
+       "      <td>0.817278</td>\n",
+       "      <td>115.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2.272000</td>\n",
+       "      <td>0.674686</td>\n",
+       "      <td>0.443582</td>\n",
+       "      <td>5.344014</td>\n",
+       "      <td>0.693182</td>\n",
+       "      <td>0.779286</td>\n",
+       "      <td>0.817829</td>\n",
+       "      <td>0.793223</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.104300</td>\n",
+       "      <td>1.068257</td>\n",
+       "      <td>0.531744</td>\n",
+       "      <td>6.406147</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.796390</td>\n",
+       "      <td>0.813953</td>\n",
+       "      <td>0.781062</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.235800</td>\n",
+       "      <td>3.835796</td>\n",
+       "      <td>1.568877</td>\n",
+       "      <td>18.900921</td>\n",
+       "      <td>0.295455</td>\n",
+       "      <td>0.743690</td>\n",
+       "      <td>0.728682</td>\n",
+       "      <td>0.624282</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>0.020200</td>\n",
+       "      <td>5.113322</td>\n",
+       "      <td>2.042440</td>\n",
+       "      <td>24.606127</td>\n",
+       "      <td>0.318182</td>\n",
+       "      <td>0.740004</td>\n",
+       "      <td>0.728682</td>\n",
+       "      <td>0.632479</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -396,6 +561,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "W0000 00:00:1761751161.525595   46975 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=980, training_loss=2.548342126862702, metrics={'train_runtime': 1804.6086, 'train_samples_per_second': 138.534, 'train_steps_per_second': 0.543, 'total_flos': 9.043658496e+16, 'train_loss': 2.548342126862702, 'epoch': 5.0})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -417,19 +601,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ab11bbf5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2/tokenizer_config.json',\n",
-       " '/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2/special_tokens_map.json',\n",
-       " '/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2/tokenizer.json')"
+       "('/work/RuneEgeskovTrust#9638/Bachelor/subset_models/2345_model/tokenizer_config.json',\n",
+       " '/work/RuneEgeskovTrust#9638/Bachelor/subset_models/2345_model/special_tokens_map.json',\n",
+       " '/work/RuneEgeskovTrust#9638/Bachelor/subset_models/2345_model/tokenizer.json')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,24 +623,14 @@
     "model = trainer.model\n",
     "merged_model = model.merge_and_unload()\n",
     "\n",
-    "output_model_dir = \"/work/MarkusLundsfrydJensen#1865/test_models_save/Option_2\"\n",
+    "output_model_dir = \"/work/RuneEgeskovTrust#9638/Bachelor/subset_models/2345_model\"\n",
     "merged_model.save_pretrained(output_model_dir)\n",
     "tokenizer.save_pretrained(output_model_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "79714b96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Hold up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "98dbc62a",
    "metadata": {},
    "outputs": [],
@@ -522,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "0f7ef1df",
    "metadata": {},
    "outputs": [
@@ -536,18 +710,18 @@
     }
    ],
    "source": [
-    "BD = BlameDetectorDa_v0(model = model_tester, tokenizer = tokenizer, max_length = 512)"
+    "BD = BlameDetectorDa_v0(model = model, tokenizer = tokenizer, max_length = 512)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "69371775",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "json_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\"\n",
+    "json_path = \"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\"\n",
     "\n",
     "with open(json_path, 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)"
@@ -555,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "45950bc1",
    "metadata": {},
    "outputs": [],
@@ -568,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "c438da5e",
    "metadata": {},
    "outputs": [
@@ -576,7 +750,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7558139534883721\n"
+      "0.813953488372093\n"
      ]
     }
    ],
@@ -608,6 +782,16 @@
     "\n",
     "\n",
     "print(correct_pred/len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9648d2a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy seems to match so save was successful"
    ]
   }
  ],
